# eath-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_shaders_mac.sh  design.md  todo.md
samples/: CMakeLists.txt
samples/basic_window/: CMakeLists.txt  main.cpp
samples/ecs_scene/: CMakeLists.txt  main.cpp
shaders/: CMakeLists.txt
src/: CMakeLists.txt
src/core/: bx_file.cpp  flecs_helpers.cpp  input.cpp  shutdown.cpp  update.cpp  world.cpp
src/gfx/: buffer.cpp  primitives.cpp  rendering.cpp  shaders.cpp  textures.cpp  view.cpp
src/include/core/: bx_file.h  bx_math.h  flecs_helpers.h  handles.h  input.h  shutdown.h  update.h  world.h
src/include/gfx/: buffer.h  primitives.h  rendering.h  shaders.h  textures.h  vertex_format.h  view.h
src/include/math/: matrix.h  matrix.inl
src/include/platform/: video.h
src/platform/: video.cpp
